--- a/lotus.html
+++ b/lotus.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lotus website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laborum voluptates minima ullam nesciunt corrupti aliquid rem aut natus ipsa enim ex laboriosam necessitatibus, beatae ipsam iure at obcaecati sint.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laborum voluptates minima ullam nesciunt corrupti aliquid rem aut natus ipsa enim ex laboriosam necessitatibus, beatae ipsam iure at obcaecati sint.</p>
+
 </body>
 </html>
